--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,18 @@
-
 {
-  "semi": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 80,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "tabWidth": 2,
+  "semi": true,
+  "endOfLine": "lf",
+  "arrowParens": "avoid",
+  "overrides": [
+    {
+      "files": "*.hbs",
+      "options": {
+        "parser": "html"
+      }
+    }
+  ]
 }
