--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "mongoose": "^8.2.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^8.2.0",
+    "mongoose-delete": "^1.0.2",
+    "mongoose-slug-updater": "^3.3.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
